ndm-api-tests/tests/performance/cmd/perf-log-20250908-115458.txt
Checking Azure CLI authentication...
Initializing Terraform...
[0m[1mInitializing the backend...[0m
[0m[1mInitializing provider plugins...[0m
- Reusing previous version of hashicorp/azurerm from the dependency lock file
- Using previously-installed hashicorp/azurerm v3.117.1

[0m[1m[32mTerraform has been successfully initialized![0m[32m[0m
[0m[32m
You may now begin working with Terraform. Try running "terraform plan" to see
any changes that are required for your infrastructure. All Terraform commands
should now work.

If you ever set or change modules or backend configuration for Terraform,
rerun this command to reinitialize your working directory. If you forget, other
commands will detect it and remind you to do so if necessary.[0m
Planning Terraform deployment...
[0m[1mdata.azurerm_virtual_network.main: Reading...[0m[0m
[0m[1mdata.azurerm_resource_group.main: Reading...[0m[0m
[0m[1mdata.azurerm_subnet.main: Reading...[0m[0m
[0m[1mdata.azurerm_shared_image_version.worker_specific[0]: Reading...[0m[0m
[0m[1mdata.azurerm_shared_image_version.cp_specific[0]: Reading...[0m[0m

[0m[1m[31mPlanning failed.[0m[1m Terraform encountered an error while generating this plan.[0m

[0m[31m╷[0m[0m
[31m│[0m [0m[1m[31mError: [0m[0m[1mresources.GroupsClient#Get: Failure responding to request: StatusCode=403 -- Original Error: autorest/azure: Service returned an error. Status=403 Code="AuthorizationFailed" Message="The client '2153e808-fb5b-4f5a-878b-e89de6ec06e3' with object id '2153e808-fb5b-4f5a-878b-e89de6ec06e3' does not have authorization to perform action 'Microsoft.Resources/subscriptions/resourcegroups/read' over scope '/subscriptions/1630c6a9-d99b-498a-aca8-a271f7506bc0/resourcegroups/MigrationAsAService-dev-infra' or the scope is invalid. If access was recently granted, please refresh your credentials."[0m
[31m│[0m [0m
[31m│[0m [0m[0m  with data.azurerm_resource_group.main,
[31m│[0m [0m  on main.tf line 92, in data "azurerm_resource_group" "main":
[31m│[0m [0m  92: data "azurerm_resource_group" "main" [4m{[0m[0m
[31m│[0m [0m
[31m╵[0m[0m
[31m╷[0m[0m
[31m│[0m [0m[1m[31mError: [0m[0m[1mretrieving Virtual Network (Subscription: "1630c6a9-d99b-498a-aca8-a271f7506bc0"
[31m│[0m [0mResource Group Name: "MigrationAsAService-dev-infra"
[31m│[0m [0mVirtual Network Name: "MigrationAsAService-dev-VNET02"): unexpected status 403 (403 Forbidden) with error: AuthorizationFailed: The client '2153e808-fb5b-4f5a-878b-e89de6ec06e3' with object id '2153e808-fb5b-4f5a-878b-e89de6ec06e3' does not have authorization to perform action 'Microsoft.Network/virtualNetworks/read' over scope '/subscriptions/1630c6a9-d99b-498a-aca8-a271f7506bc0/resourceGroups/MigrationAsAService-dev-infra/providers/Microsoft.Network/virtualNetworks/MigrationAsAService-dev-VNET02' or the scope is invalid. If access was recently granted, please refresh your credentials.[0m
[31m│[0m [0m
[31m│[0m [0m[0m  with data.azurerm_virtual_network.main,
[31m│[0m [0m  on main.tf line 96, in data "azurerm_virtual_network" "main":
[31m│[0m [0m  96: data "azurerm_virtual_network" "main" [4m{[0m[0m
[31m│[0m [0m
[31m╵[0m[0m
[31m╷[0m[0m
[31m│[0m [0m[1m[31mError: [0m[0m[1mretrieving Subnet (Subscription: "1630c6a9-d99b-498a-aca8-a271f7506bc0"
[31m│[0m [0mResource Group Name: "MigrationAsAService-dev-infra"
[31m│[0m [0mVirtual Network Name: "MigrationAsAService-dev-VNET02"
[31m│[0m [0mSubnet Name: "MigrationAsAService-dev-VNET02_Subnet01"): unexpected status 403 (403 Forbidden) with error: AuthorizationFailed: The client '2153e808-fb5b-4f5a-878b-e89de6ec06e3' with object id '2153e808-fb5b-4f5a-878b-e89de6ec06e3' does not have authorization to perform action 'Microsoft.Network/virtualNetworks/subnets/read' over scope '/subscriptions/1630c6a9-d99b-498a-aca8-a271f7506bc0/resourceGroups/MigrationAsAService-dev-infra/providers/Microsoft.Network/virtualNetworks/MigrationAsAService-dev-VNET02/subnets/MigrationAsAService-dev-VNET02_Subnet01' or the scope is invalid. If access was recently granted, please refresh your credentials.[0m
[31m│[0m [0m
[31m│[0m [0m[0m  with data.azurerm_subnet.main,
[31m│[0m [0m  on main.tf line 101, in data "azurerm_subnet" "main":
[31m│[0m [0m 101: data "azurerm_subnet" "main" [4m{[0m[0m
[31m│[0m [0m
[31m╵[0m[0m
[31m╷[0m[0m
[31m│[0m [0m[1m[31mError: [0m[0m[1mretrieving Image Version (Subscription: "1630c6a9-d99b-498a-aca8-a271f7506bc0"
[31m│[0m [0mResource Group Name: "datamigrate-acr-resource-group"
[31m│[0m [0mGallery Name: "datamigrator"
[31m│[0m [0mImage Name: "ndm-control-plane"
[31m│[0m [0mVersion Name: "2025.07.09190330"): unexpected status 403 (403 Forbidden) with error: AuthorizationFailed: The client '2153e808-fb5b-4f5a-878b-e89de6ec06e3' with object id '2153e808-fb5b-4f5a-878b-e89de6ec06e3' does not have authorization to perform action 'Microsoft.Compute/galleries/images/versions/read' over scope '/subscriptions/1630c6a9-d99b-498a-aca8-a271f7506bc0/resourceGroups/datamigrate-acr-resource-group/providers/Microsoft.Compute/galleries/datamigrator/images/ndm-control-plane/versions/2025.07.09190330' or the scope is invalid. If access was recently granted, please refresh your credentials.[0m
[31m│[0m [0m
[31m│[0m [0m[0m  with data.azurerm_shared_image_version.cp_specific[0],
[31m│[0m [0m  on main.tf line 116, in data "azurerm_shared_image_version" "cp_specific":
[31m│[0m [0m 116: data "azurerm_shared_image_version" "cp_specific" [4m{[0m[0m
[31m│[0m [0m
[31m╵[0m[0m
[31m╷[0m[0m
[31m│[0m [0m[1m[31mError: [0m[0m[1mretrieving Image Version (Subscription: "1630c6a9-d99b-498a-aca8-a271f7506bc0"
[31m│[0m [0mResource Group Name: "datamigrate-acr-resource-group"
[31m│[0m [0mGallery Name: "datamigrator"
[31m│[0m [0mImage Name: "ndm-worker"
[31m│[0m [0mVersion Name: "2025.07.09185854"): unexpected status 403 (403 Forbidden) with error: AuthorizationFailed: The client '2153e808-fb5b-4f5a-878b-e89de6ec06e3' with object id '2153e808-fb5b-4f5a-878b-e89de6ec06e3' does not have authorization to perform action 'Microsoft.Compute/galleries/images/versions/read' over scope '/subscriptions/1630c6a9-d99b-498a-aca8-a271f7506bc0/resourceGroups/datamigrate-acr-resource-group/providers/Microsoft.Compute/galleries/datamigrator/images/ndm-worker/versions/2025.07.09185854' or the scope is invalid. If access was recently granted, please refresh your credentials.[0m
[31m│[0m [0m
[31m│[0m [0m[0m  with data.azurerm_shared_image_version.worker_specific[0],
[31m│[0m [0m  on main.tf line 133, in data "azurerm_shared_image_version" "worker_specific":
[31m│[0m [0m 133: data "azurerm_shared_image_version" "worker_specific" [4m{[0m[0m
[31m│[0m [0m
[31m╵[0m[0m
2025/09/08 11:55:41 Failed to create Azure VMs: *********Failed to execute create_vms.sh script: exit status 1*********
